[package]
name = "c2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "c2p"
path = "src/main.rs"

[dependencies]
regex = "1"
walkdir = "2"
clap = { version = "3", features = ["derive"] }
glob = "0.3"